package main.java.struction.decorator;

/**
 * Create with IntelliJ IDEA
 * Author:YangZhao
 * Date:2024/4/6
 * Time:9:42
 */
public abstract class AOrders {

    protected abstract String getDesc();

    protected abstract int getCost();
}
